# epubl

./: .gitignore  .pre-commit-config.yaml  README.md  RELEASE.md  index.html  package-lock.json  package.json  tsconfig.e2e.json  tsconfig.json  vite.config.ts  wdio.conf.ts
.beads/: issues.jsonl  metadata.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  e2e-testing.md
e2e/: run.sh
e2e/fixtures/: README.md  make_sample_epub.py
e2e/specs/: device-panel.spec.ts  eject-error.spec.ts  epub-list.spec.ts  sync-button.spec.ts  update-banner.spec.ts
scripts/: ci-windows.sh  pre-push.sh
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  copy.rs  epub.rs  lib.rs  log.rs  main.rs  updater.rs  usb.rs
src-tauri/tests/: config_integration.rs  copy_integration.rs  epub_integration.rs
