[package]
name = "epubl"
version = "0.1.0"
edition = "2021"

[lib]
name = "epubl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "epubl"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
zip = "2"

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.14"
windows = { version = "0.58", features = [
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_Wmi",
] }

[dev-dependencies]
tempfile = "3"
zip = "2"

[features]
e2e-mock = []
e2e-update-mock = []

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
